--- a/html/index.html
+++ b/html/index.html
@@ -13,5 +13,12 @@
 <h3><a href="dir">Directory</a></h3>
 <hr>
 <h3><a href="nonexistent.html">404</a></h3>
+<hr>
+<h3>Post</h3>
+<form action="welcome.php" method="post">
+    Name: <input type="text" name="name"><br>
+    E-mail: <input type="text" name="email"><br>
+    <input type="submit">
+</form>
 </body>
 </html>
