Init of the version on vogsphere

--- a/html/index.html
+++ b/html/index.html
@@ -5,20 +5,15 @@
 <p>webserv/1.0</p>
 <hr>
 <h2>Cgi:</h2>
+<a href="cgi-bin/perl.cgi">perl</a><br>
+<a href="cgi-bin/date.idk">bash</a><br>
+<a href="cgi-bin/hello.rb">ruby</a><br>
+<br>
+<p>Only works if php-cgi is installed:</p>
 <a href="hello.php">hello</a><br>
 <a href="phpinfo.php">phpinfo</a><br>
-<a href="cgi-bin/perl.cgi">perl</a><br>
-<a href="cgi-bin/env.idk">env</a>
 <hr>
 <h3><a href="dir">Directory</a></h3>
 <hr>
 <h3><a href="nonexistent.html">404</a></h3>
 <hr>
-<h3>Post</h3>
-<form action="welcome.php" method="post">
-    Name: <input type="text" name="name"><br>
-    E-mail: <input type="text" name="email"><br>
-    <input type="submit">
-</form>
-</body>
-</html>
