--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <html>
-<head><title>Spoderman</title></head>
+<head><title>Webserv</title></head>
 <body>
-<h1>Spoderman</h1>
+<h1>Webserv</h1>
 <p>webserv/1.0</p>
 <hr>
 <h2>Cgi:</h2>
